--- a/dev/html/index.html
+++ b/dev/html/index.html
@@ -9,6 +9,6 @@
 <body>
   <div id='app'></div>
   <script src="http://localhost:35729/livereload.js"></script>
-  <script src='hotColdReactRedux.1.0.0.js'></script>
+  <script src='hotColdReactReduxShaySofia.1.0.0.js'></script>
 </body>
 </html>
